# smol-profile-card

./: Cargo.toml
src/: controllers.rs  entities.rs  main.rs  mappers.rs  models.rs  repositories.rs  services.rs  time.rs  validators.rs
src/controllers/: image.rs  index.rs
src/entities/: github_user.rs
src/mappers/: github_user_mapper.rs  pronouns_mapper.rs
src/models/: empty.rs  github_user.rs
src/repositories/: github_user_repository.rs
src/services/: github_user_service.rs
src/templates/: about.hbs  index.hbs  template.hbs
src/templates/errors/: 500.hbs  503.hbs  template.hbs
static/css/: stylesheet.css
