[package]
name = "smol-profile-card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
axum-macros = "0.3.7"
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
handlebars = { version = "4.3.6", features = ["dir_source"] }
log = "0.4.17"
reqwest = "0.11.17"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-rusqlite = { version = "0.4.0" }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
